[workspace]
members = [
    "client/aura",
    "primitives/aura",
    "node",
    "pallets/etf",
    "runtime",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true

[workspace.metadata.release]
dependent-version = "fix"