[workspace]
members = [
    "client/consensus/aura",
    "client/network/test",
    "primitives/consensus/aura",
    "node",
    "pallets/etf",
    "runtime",
    "test-utils/runtime",
    "test-utils/runtime/client",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Ideal Labs <driemworks@idealabs.network>"]
repository = "https://github.com/ideal-lab5/etf"


[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true

[workspace.metadata.release]
dependent-version = "fix"