[package]
name = "node-primitives"
version = "2.0.0"
#authors.workspace = true
description = "Substrate node low-level primitives."
#edition.workspace = true
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
#repository.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-runtime = { version = "24.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.3.0"  }
sp-core = { version = "21.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.3.0"  }

[features]
default = [ "std" ]
std = [ "sp-core/std", "sp-runtime/std" ]
