[package]
name = "node-primitives"
version = "2.0.0"
authors.workspace = true
description = "Substrate node low-level primitives."
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.8.0-rc1" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.8.0-rc1" }

[features]
default = ["std"]
std = ["sp-core/std", "sp-runtime/std"]
